# nuttx_wrapper

./: .gitignore  CMakeLists.txt  README.md
boards/esp32c6-devkitm/configs/nsh/: defconfig
boards/esp32c6-devkitm/src/: CMakeLists.txt
boards/esp32c6-devkitm/src/etc/init.d/: rcS
boards/prototype/: README.txt
boards/prototype/ROMFS/init.d/: rcS
boards/prototype/configs/dev/: defconfig
boards/prototype/configs/imu/: defconfig
boards/prototype/configs/nsh/: defconfig
boards/prototype/configs/pwm/: defconfig
boards/prototype/configs/serial/: defconfig
boards/prototype/configs/usbconsole/: defconfig
boards/prototype/include/: board.h  nsh_romfsimg.h
boards/prototype/src/: CMakeLists.txt  Makefile  etc_romfs.c  prototype.h  stm32_appinitialize.c  stm32_autoleds.c  stm32_boot.c  stm32_bringup.c  stm32_composite.c  stm32_pwm.c  stm32_spi.c  stm32_timer.c  stm32_usb.c  stm32_userleds.c
boards/prototype/src/etc/init.d/: rc.sysinit  rcS
cmake/: add_module.cmake  app.bdat.in  app.pdat.in  common_flags.cmake  config_app.cmake  config_nuttx.cmake  esp32c6.cmake  fetch_third_library.cmake  misc.cmake  stm32h7.cmake  toolchain.cmake
src/modules/ADIS16470/: CMakeLists.txt  imu_16470_main.cc
src/modules/dshot/: CMakeLists.txt  dshot.hpp  dshot_lower_drv.hpp  dshot_main.cc
src/modules/hello_nuttx/: CMakeLists.txt
src/modules/imu/: CMakeLists.txt  bmi08_port.c  bmi08_port.h  bmi08g.c  imu_main.cc
src/modules/imu/filter/: ConsistentOrientationFilter.hpp  EmbeddedLie.hpp  EmbeddedMath.hpp  ErrorStateKalmanFilter.hpp  KalmanFilterBase.hpp
src/modules/pwm/: CMakeLists.txt  pwm_main.cc
src/modules/serial/: CMakeLists.txt  serial_main.cc  static_queue.hpp
